NetBSD Problem Report #55914
From gson@gson.org Thu Jan 7 09:16:21 2021
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id E65C21A9217
for <gnats-bugs@gnats.NetBSD.org>; Thu, 7 Jan 2021 09:16:21 +0000 (UTC)
Message-Id: <20210107091616.9BE04253EDE@guava.gson.org>
Date: Thu, 7 Jan 2021 11:16:16 +0200 (EET)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: Set extraction fails with "Interrupted system call"
X-Send-Pr-Version: 3.95
>Number: 55914
>Category: bin
>Synopsis: Set extraction fails with "Interrupted system call"
>Confidential: no
>Severity: critical
>Priority: high
>Responsible: lukem
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Thu Jan 07 09:20:00 +0000 2021
>Closed-Date: Thu Jan 07 19:21:59 +0000 2021
>Last-Modified: Fri Jan 29 18:30:01 +0000 2021
>Originator: Andreas Gustafsson
>Release: NetBSD-current, source date >= 2021.01.06.04.43.14
>Organization:
>Environment:
System: NetBSD
Architecture: sparc
Machine: sparc
>Description:
On the TNF sparc testbed, installation is failing at the set
extraction stage, with the error message
progress: writing 8192 bytes to output pipe: Interrupted system call
since this commit:
2021.01.06.04.43.14 lukem src/usr.bin/ftp/ftp.c 1.171
2021.01.06.04.43.14 lukem src/usr.bin/ftp/progressbar.c 1.24
2021.01.06.04.43.14 lukem src/usr.bin/ftp/progressbar.h 1.9
2021.01.06.04.43.14 lukem src/usr.bin/ftp/ssl.c 1.9
2021.01.06.04.43.14 lukem src/usr.bin/ftp/version.h 1.92
Logs:
http://releng.netbsd.org/b5reports/sparc/commits-2021.01.html#2021.01.06.04.43.14
There have also been random install failures on amd64:
http://releng.netbsd.org/b5reports/amd64/commits-2021.01.html#2021.01.06.14.07.43
https://www.gson.org/netbsd/bugs/build/amd64-baremetal/commits-2021.01.html#2021.01.06.20.38.09
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: bin-bug-people->lukem
Responsible-Changed-By: lukem@NetBSD.org
Responsible-Changed-When: Thu, 07 Jan 2021 11:51:55 +0000
Responsible-Changed-Why:
I'll investigate
State-Changed-From-To: open->feedback
State-Changed-By: lukem@NetBSD.org
State-Changed-When: Thu, 07 Jan 2021 12:03:19 +0000
State-Changed-Why:
Please try progress.c 1.23
From: "Luke Mewburn" <lukem@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/55914 CVS commit: src/usr.bin/progress
Date: Thu, 7 Jan 2021 12:02:52 +0000
Module Name: src
Committed By: lukem
Date: Thu Jan 7 12:02:52 UTC 2021
Modified Files:
src/usr.bin/progress: progress.c
Log Message:
progress: handle EINTR in writes. PR/55914
To generate a diff of this commit:
cvs rdiff -u -r1.22 -r1.23 src/usr.bin/progress/progress.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: feedback->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Thu, 07 Jan 2021 19:21:59 +0000
State-Changed-Why:
The sparc testbed has completed an install with progress.c 1.23, so looks like the
bug has been fixed. Thanks.
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/55914 CVS commit: [netbsd-9] src/usr.bin/progress
Date: Fri, 29 Jan 2021 18:27:05 +0000
Module Name: src
Committed By: martin
Date: Fri Jan 29 18:27:05 UTC 2021
Modified Files:
src/usr.bin/progress [netbsd-9]: progress.c
Log Message:
Pull up following revision(s) (requested by lukem in ticket #1189):
usr.bin/progress/progress.c: revision 1.23
progress: handle EINTR in writes. PR/55914
To generate a diff of this commit:
cvs rdiff -u -r1.21 -r1.21.18.1 src/usr.bin/progress/progress.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.