progress: handle EINTR in writes. PR/55914